--- a/src/css/main.css
+++ b/src/css/main.css
@@ -263,6 +263,7 @@ html {
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   overscroll-behavior: none;
+  color: white;
 }
 body:has(dialog:open) {
   overflow: inherit;
@@ -273,6 +274,80 @@ body.lock-scrollbar {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.loading {
+  display: grid;
+  place-items: center;
+  width: 100dvw;
+  height: 100dvh;
+}
+.loading__reel {
+  width: 80px;
+  height: 80px;
+  position: relative;
+}
+.loading__reel::after {
+  content: "";
+  width: 50%;
+  height: 8px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background-color: black;
+}
+.loading__inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: black;
+  border-radius: 50%;
+  animation: rolling 10s linear infinite;
+}
+.loading__inner div {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  background-color: white;
+  border-radius: 50%;
+}
+.loading__inner div:nth-child(1) {
+  top: 20%;
+}
+.loading__inner div:nth-child(2) {
+  top: 35%;
+  left: 78%;
+}
+.loading__inner div:nth-child(3) {
+  top: 65%;
+  left: 78%;
+}
+.loading__inner div:nth-child(4) {
+  top: 80%;
+}
+.loading__inner div:nth-child(5) {
+  top: 65%;
+  left: 22%;
+}
+.loading__inner div:nth-child(6) {
+  top: 35%;
+  left: 22%;
+}
+.loading__inner div:nth-child(7) {
+  width: 10px;
+  height: 10px;
+}
+@keyframes rolling {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .header {
@@ -521,10 +596,12 @@ body.lock-scrollbar {
   top: 0;
   left: 0;
   opacity: 0;
+  z-index: 0;
   transition: 500ms ease-in;
 }
 .carousel__item--active {
   opacity: 1;
+  z-index: 1;
 }
 @media (min-width: 60rem) {
   .carousel__item {
@@ -536,7 +613,7 @@ body.lock-scrollbar {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: brightness(0.75);
+  filter: brightness(0.6);
   user-select: none;
   position: absolute;
   top: 0;
@@ -573,7 +650,12 @@ body.lock-scrollbar {
 .carousel__item-details {
   display: flex;
   gap: 0.5rem;
-  font-size: 1.25rem;
+  margin-top: -0.5rem;
+}
+.carousel__item-rating {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 .carousel__item-genres {
   display: flex;
@@ -582,7 +664,7 @@ body.lock-scrollbar {
 }
 .carousel__item-genres span {
   backdrop-filter: blur(15px);
-  background-color: hsla(0, 0%, 0%, 0.8);
+  background-color: hsla(0, 0%, 100%, 0.1);
   font-size: 0.875rem;
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
@@ -829,7 +911,7 @@ body.lock-scrollbar {
   background-color: hsla(0, 0%, 0%, 0.8);
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.25rem;
   width: calc(var(--card-width) * 1.5);
   height: 100%;
   position: absolute;
@@ -846,16 +928,23 @@ body.lock-scrollbar {
   font-size: 1.75rem;
   font-weight: 500;
   margin-bottom: 0.25rem;
+  line-height: 1;
 }
 .slider__card-details {
   display: flex;
   gap: 0.5rem;
   font-size: 0.875rem;
 }
+.slider__card-rating {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
 .slider__card-genres {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
+  margin-top: 0.5rem;
 }
 .slider__card-genres span {
   font-size: 0.875rem;
@@ -870,7 +959,7 @@ body.lock-scrollbar {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
 }
 .slider__btn {
@@ -1088,11 +1177,13 @@ body.lock-scrollbar {
 }
 
 .footer {
+  padding: 0.75rem;
+  margin-top: 1rem;
+}
+.footer p {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  padding: 0.75rem;
-  margin-top: 1rem;
-  text-align: center;
+  max-width: 100%;
 }/*# sourceMappingURL=main.css.map */
