--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -7,6 +7,7 @@ html {
 body {
   font-family: $font-family;
   overscroll-behavior: none;
+  color: white;
 
   &:has(dialog:open) {
     overflow: inherit;
