--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -113,7 +113,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: $spacing-2;
+    gap: $spacing-1;
     width: calc(var(--card-width) * 1.5);
     height: 100%;
     position: absolute;
@@ -136,6 +136,7 @@
     font-size: map-get($font-size, 2);
     font-weight: 500;
     margin-bottom: $spacing-1;
+    line-height: 1;
   }
 
   &__card-details {
@@ -144,10 +145,17 @@
     font-size: map-get($font-size, 6);
   }
 
+  &__card-rating {
+    display: flex;
+    align-items: center;
+    gap: $spacing-1;
+  }
+
   &__card-genres {
     display: flex;
     flex-wrap: wrap;
     gap: $spacing-2;
+    margin-top: $spacing-2;
 
     & span {
       font-size: map-get($font-size, 6);
@@ -164,7 +172,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 7; // Limit to 7 lines
+    -webkit-line-clamp: 6; // Limit lines
     -webkit-box-orient: vertical;
   }
 
