--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,8 +1,14 @@
-$primary: red;
-$secondary: green;
-$accent: lime;
+$primary: #403d39;
+$secondary: #ccc5b9;
+$accent: #eb5e28;
 $light: #fff;
 $dark: #000;
 
+$trailer-color: #ff0033;
+
+$bg: #121212;
+
 $dark-glass-color: hsl(0, 0%, 0%, 0.8);
 $light-glass-color: hsl(0, 0%, 100%, 0.1);
+
+$gradient: linear-gradient(135deg, #0c0c0c 0%, #1a1a2e 50%, #16213e 100%);
