--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 
 .content-section {
+  @include container;
   display: flex;
   flex-direction: column;
   gap: $spacing-4;
