--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,8 @@
 
 @use "./components/loading";
 
+@use "./components/pageNotFound";
+
 @use "./components/header";
 
 @use "./components/searchbar";
