--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -5,13 +5,21 @@
   height: 100svh;
   position: relative;
   overflow: hidden;
+  -webkit-tap-highlight-color: transparent; /* For Safari and Chrome */
+  -webkit-touch-callout: none; /* Prevent callout menu on long press */
+  outline: none;
+
+  @media (min-width: map-get($breakpoint, extra-large)) {
+    height: min(100svh, 43.75rem);
+  }
 
   &__item {
+    @include user-select-none;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: end;
+    justify-content: start;
     width: 100%;
-    height: 100svh;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -24,9 +32,13 @@
       z-index: 1;
     }
 
+    @media (min-width: map-get($breakpoint, medium)) and (max-width: map-get($breakpoint, large)) {
+      align-items: center;
+      justify-content: center;
+    }
+
     @media (min-width: map-get($breakpoint, large)) {
-      align-items: end;
-      justify-content: start;
+      padding-left: calc((100% - $container) / 2);
     }
   }
 
@@ -34,7 +46,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center center;
     filter: brightness(0.6);
+    pointer-events: none;
     user-select: none;
 
     position: absolute;
@@ -43,8 +57,8 @@
     z-index: -1;
 
     &:first-of-type {
+      @include fade-in(1s, ease-in-out);
       opacity: 0;
-      animation: fade-in 300ms ease-in forwards;
     }
   }
 
@@ -52,20 +66,22 @@
     display: flex;
     flex-direction: column;
     gap: $spacing-2;
-    width: min(30rem, 100%);
-    // padding: $spacing-4 $spacing-4 $spacing-4 clamp(1rem, -5rem + 10vw, 3rem);
-    padding: $spacing-4;
+    padding: $spacing-6;
     user-select: none;
     margin-top: -6rem;
 
     &:first-of-type {
+      @include fade-in-slide-up(500ms, ease-in, 300ms);
       opacity: 0;
-      animation: fade-in 600ms ease-in forwards 300ms;
+    }
+
+    @media (min-width: map-get($breakpoint, medium)) and (max-width: map-get($breakpoint, large)) {
+      width: 40rem;
     }
 
     @media (min-width: map-get($breakpoint, large)) {
-      width: 50%;
-      padding-left: calc((100% - $container));
+      width: calc($container / 2);
+      padding-left: clamp(1rem, -4.3913rem + 8.6957vw, 3rem);
     }
   }
 
@@ -76,14 +92,22 @@
 
   &__item-details {
     display: flex;
+    align-items: center;
     gap: $spacing-2;
     margin-top: calc($spacing-2 * -1);
+  }
+
+  &__item-rating-category {
+    padding-inline: $spacing-1;
+    background-color: $accent;
+    border-radius: $spacing-1;
   }
 
   &__item-rating {
     display: flex;
     align-items: center;
     gap: $spacing-1;
+    font-weight: bold;
   }
 
   &__item-genres {
@@ -95,6 +119,7 @@
       @include light-glass-effect;
       font-size: map-get($font-size, 6);
       padding: $spacing-1 $spacing-2;
+      border: 1px solid $light;
       border-radius: $spacing-1;
     }
   }
@@ -104,28 +129,39 @@
     max-width: 100%;
   }
 
-  &__item-trailer {
+  &__item-actions {
     display: flex;
     align-items: center;
-    gap: $spacing-1;
-    width: fit-content;
-    padding: $spacing-2;
-    background-color: red;
-    border-radius: $spacing-2;
-    transition: 250ms ease;
+    gap: $spacing-4;
+  }
+
+  .btn--trailer {
+    background-color: $trailer-color;
 
     &:hover {
-      color: red;
-      background-color: black;
+      color: $trailer-color;
+      background-color: $dark;
+    }
+  }
+
+  &__item-view-details {
+    width: fit-content;
+    height: 100%;
+    padding: $spacing-1 $spacing-2;
+    border-radius: $spacing-1;
+
+    &:hover {
+      opacity: 0.5;
     }
   }
 
   &__slider {
+    @include fade-in-slide-up(500ms, ease-in, 1s);
     position: absolute;
-    right: 0;
+    right: calc((100% - $container) / 2);
     bottom: 0;
+    opacity: 0;
     z-index: 10;
-    width: 42.5vw;
     width: 100%;
     height: 12rem;
 
@@ -136,10 +172,12 @@
     -ms-perspective: $perspective;
     perspective: $perspective;
 
-    animation: fade-in 500ms ease-in forwards 600ms;
+    @media (max-width: map-get($breakpoint, medium)) {
+      display: none;
+    }
 
     @media (min-width: map-get($breakpoint, large)) {
-      width: 50%;
+      width: calc($container / 2);
     }
   }
 
@@ -147,10 +185,6 @@
   &__slider-item {
     --slider-item-width: 8rem;
     --slider-item-height: 11rem;
-    // $slider-item-width:8rem;
-    // $slider-item-height:11rem;
-    // width: $slider-item-width;
-    // height: $slider-item-height;
     width: var(--slider-item-width);
     height: var(--slider-item-height);
     position: absolute;
@@ -177,7 +211,6 @@
       z-index: 2;
       transform: translateX(calc(var(--slider-item-width) * -1))
         translateZ(-250px);
-      // transform: translateX(-$slider-item-width) translateZ(-250px);
     }
 
     &--prev-2 {
@@ -185,14 +218,12 @@
       z-index: 1;
       transform: translateX(calc(var(--slider-item-width) * -2))
         translateZ(-500px);
-      // transform: translateX(-$slider-item-width * 2) translateZ(-500px);
     }
 
     &--next-1 {
       opacity: 1;
       z-index: 2;
       transform: translateX(var(--slider-item-width)) translateZ(-250px);
-      // transform: translateX($slider-item-width) translateZ(-250px);
     }
 
     &--next-2 {
@@ -200,54 +231,20 @@
       z-index: 1;
       transform: translateX(calc(var(--slider-item-width) * 2))
         translateZ(-500px);
-      // transform: translateX($slider-item-width * 2) translateZ(-500px);
     }
 
     @media (max-width: map-get($breakpoint, medium)) {
       --slider-item-width: 7rem;
       --slider-item-height: 10rem;
-      // $slider-item-width: 7rem;
-      // $slider-item-height: 10rem;
-      // width: $slider-item-width;
-      // height: $slider-item-height;
-
-      // &--active {
-      //   opacity: 1;
-      //   z-index: 3;
-      //   transform: translateZ(0);
-      // }
-
-      // &--prev-1 {
-      //   opacity: 1;
-      //   z-index: 2;
-      //   transform: translateX(-$slider-item-width) translateZ(-250px);
-      // }
-
-      // &--prev-2 {
-      //   opacity: 0;
-      //   z-index: 1;
-      //   transform: translateX(0) translateZ(-500px);
-      // }
-
-      // &--next-1 {
-      //   opacity: 1;
-      //   z-index: 2;
-      //   transform: translateX($slider-item-width) translateZ(-250px);
-      // }
-
-      // &--next-2 {
-      //   opacity: 0;
-      //   z-index: 1;
-      //   transform: translateX(0) translateZ(-500px);
-      // }
     }
   }
 
   &__slider-img {
+    @include user-drag-none;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: 250ms ease-in-out;
+    transition: 250ms ease-in;
 
     -webkit-backface-visibility: hidden;
     -ms-transform: translateZ(0); /* IE 9 */
@@ -262,8 +259,7 @@
 
     @media (hover: hover) {
       &:hover {
-        object-fit: cover;
-        transform: scale(1.1);
+        scale: 1.1;
       }
     }
   }
