--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -1,13 +1,17 @@
+@use "../abstracts" as *;
+
 .loading {
   display: grid;
   place-items: center;
   width: 100dvw;
   height: 100dvh;
+  background: $gradient;
 
   &__reel {
     width: 80px;
     height: 80px;
     position: relative;
+    z-index: 1;
 
     &::after {
       content: "";
@@ -17,7 +21,7 @@
       bottom: 0;
       right: 0;
       z-index: -1;
-      background-color: black;
+      background-color: $dark;
     }
   }
 
@@ -25,7 +29,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: black;
+    background-color: #000;
     border-radius: 50%;
     animation: rolling 10s linear infinite;
 
@@ -36,7 +40,7 @@
       top: 50%;
       left: 50%;
       translate: -50% -50%;
-      background-color: white;
+      background-color: #1a1a2e;
       border-radius: 50%;
     }
 
