test mobile fetch

--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -4,7 +4,7 @@
   display: grid;
   place-items: center;
   width: 100dvw;
-  height: 100dvh;
+  height: 100svh;
   background: $gradient;
 
   &__reel {
